login-monitor (1.1kord-15) v101; urgency=medium

  *摘除系统时间修改监控功能

 -- zhangdongwei <zhangdongwei@kylinos.cn>  Wed, 28 Apr 2021 09:30:51 +0800

login-monitor (1.1kord-14) v101; urgency=medium

  *修改代码错误 

 -- zhangdongwei <zhangdongwei@kylinos.cn>  Fri, 27 Nov 2020 15:48:42 +0800

login-monitor (1.1kord-13) v101; urgency=medium

  * 合并dpkg监控代码，改由inotify方案实现
  * 增加腾讯uid参数

 -- zhangdongwei <zhangdongwei@kylinos.cn>  Fri, 27 Nov 2020 14:28:10 +0800

login-monitor (1.1kord-12) v101; urgency=medium
  
   *修改系统时间获取函数
 
 -- zhangdongwei <zhangdongwei@kylinos.cn>  Fri, 30 sep 2020 14:26:50 +0800

login-monitor (1.1kord-10) v101; urgency=medium

   *增加系统时间修改事件信号
 
 -- zhangdongwei <zhangdongwei@kylinos.cn>  Sat, 23 Sep 2020 14:28:45 +0800

login-monitor (1.1kord-9) v101; urgency=medium
  
   *增加获取当前正在使用用户uid dbus方法调用接口
  
 -- zhangdongwei <zhangdongwei@kylinos.cn>  Sat, 19 Sep 2020 14:28:45 +0800

login-monitor (1.1kord-7) v101; urgency=medium

  * 修复链表存储用户信息bug

 -- zhangdongwei <zhangdongwei@kylinos.cn>  Mon, 11 Sep 2020 14:28:45 +0800

login-monitor (1.1kord-6) v101; urgency=medium

  * Modify debian/postinst

 -- zhangdongwei <zhangdongwei@kylinos.cn>  Mon, 24 Aug 2020 14:28:45 +0800

login-monitor (1.1kord-5) v101; urgency=medium

  * Modify dpkg_monitor.c source file, modify path

 -- zhangdongwei <zhangdongwei@kylinos.cn>  Mon, 24 Aug 2020 14:28:45 +0800

login-monitor (1.1kord-4) v101; urgency=medium

  * Modify install and conffiles file

 -- zhangdongwei <zhangdongwei@kylinos.cn>  Mon, 24 Aug 2020 14:28:45 +0800

login-monitor (1.1kord-3) v101; urgency=medium

  * Modify control file

 -- zhangdongwei <zhangdongwei@kylinos.cn>  Mon, 24 Aug 2020 14:28:45 +0800

login-monitor (1.1kord-2) v101; urgency=medium

  * Modify control file

 -- zhangdongwei <zhangdongwei@kylinos.cn>  Mon, 24 Aug 2020 14:28:45 +0800
login-monitor (1.1kord-1) v101; urgency=medium

  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
